[package]
name = "cook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
fs_extra = "1.3.0"
indicatif = "0.18.4"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
semver = "1.0.25"
toml = "1.1.0"
walkdir = "2.5.0"
zip = "2.2.0"
